<resources>
    <string name="app_name">Zgadywanka</string>
    <string name="a">A</string>
    <string name="aa">Ą</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="cc">Ć</string>
    <string name="d">D</string>
    <string name="ee">Ę</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="ll">Ł</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="nn">Ń</string>
    <string name="o">O</string>
    <string name="oo">Ó</string>
    <string name="p">P</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="ss">Ś</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="w">W</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="zx">Ź</string>
    <string name="zz">Ż</string>
    <string name="text">-------------</string>
    <string name="category">...</string>
    <string name="next">Następne hasło</string>
    <string name="change_category">Zmień kategorię</string>
    <string name="points">0</string>
    <string name="score">0</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="zmien_categorie_text">WYBIERZ KATEGORIĘ:</string>
    <string name="imiona">imiona</string>
    <string name="jedzenie">jedzenie</string>
    <string name="miasta">miasta</string>
    <string name="państwa">państwa</string>
    <string name="zwierzęta">zwierzęta</string>
    <string name="wszystkie">wszystkie</string>
    <string name="categoryText">Kategoria:</string>
    <string name="scoreText">WYNIK:</string>
    <string name="hintButton">podpowiedź</string>
    <string name="hint"></string>
    <string name="podpowiedz">Podpowiedz</string>
</resources>
