<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UselessLeaf"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoreText"
                android:textSize="20sp"
                tools:ignore="NestedWeights"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="123dp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/score"
                android:textSize="20sp"
                tools:ignore="NestedWeights,RtlHardcoded"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="123dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp">


            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:text="@string/categoryText"
                android:textSize="25sp"
                tools:ignore="NestedWeights"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="123dp" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:text="@string/category"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="123dp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:contentDescription="@string/podpowiedz"
                android:onClick="getHint"
                app:srcCompat="@android:drawable/ic_menu_help" />

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/text"
            android:textSize="35sp"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="123dp" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/hint"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="123dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="218dp">


            <Button
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/a"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/aa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/aa"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/b"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/c"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/cc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/cc"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/d"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/e"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/ee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/ee"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="218dp">

            <Button
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/f"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/g"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/h"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/i"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/j"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/k"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/l"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/ll"
                tools:ignore="InefficientWeight" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="218dp">

            <Button
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/m"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/n"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/nn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/nn"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/o"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/oo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/oo"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/p"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/r"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/s"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="218dp">


            <Button
                android:id="@+id/ss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/ss"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/t"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/u"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/w"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/y"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/z"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/zx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/zx"
                tools:ignore="InefficientWeight" />

            <Button
                android:id="@+id/zz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getChar"
                android:text="@string/zz"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessLeaf"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="218dp">


            <Button
                android:id="@+id/change_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="changeCategory"
                android:text="@string/change_category"
                tools:ignore="InefficientWeight" />

            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/points"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="123dp" />


            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextWord"
                android:text="@string/next"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>