<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeCategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/changeCategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zmien_categorie_text"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/kategoriaImiona"
            android:onClick="chooseCategory"
            android:text="@string/imiona"
            android:textColorLink="@color/design_default_color_primary" />

        <Button
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/kategoriaJedzenie"
            android:onClick="chooseCategory"
            android:text="@string/jedzenie" />

        <Button
            android:id="@+id/cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/katogoriaMiasta"
            android:onClick="chooseCategory"
            android:text="@string/miasta" />

        <Button
            android:id="@+id/countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/kategoriaPanstwa"
            android:onClick="chooseCategory"
            android:text="@string/państwa" />

        <Button
            android:id="@+id/animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/kategoriaZwierzeta"
            android:onClick="chooseCategory"
            android:text="@string/zwierzęta" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>